# gtk-client

./: Cargo.toml  README.md  SECURITY_AUDIT.md  adelie-gtk.desktop  justfile
src/: async_bridge.rs  credential_store.rs  main.rs  management_client.rs  markdown.rs  profile.rs  selection_store.rs  style.css  webview.rs  window.rs
src/widgets/: chat_view.rs  connection_config_dialog.rs  connections_tab.rs  input_bar.rs  knowledge_browser.rs  login_screen.rs  mod.rs  model_picker.rs  model_selector.rs  purposes_tab.rs  settings_dialog.rs  sidebar.rs
