[package]
name = "adele-gtk"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[[bin]]
name = "adele-gtk"
path = "src/main.rs"

[features]
default = ["linux"]
linux = ["dep:webkit6", "desktop-assistant-client-common/dbus"]

[dependencies]
anyhow = "1"
base64 = "0.22"
dirs = "6"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
oauth2 = "5"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }
gtk4 = { version = "0.9", package = "gtk4" }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23.37", features = ["ring"] }

[dependencies.webkit6]
version = "0.4"
optional = true

[dependencies.desktop-assistant-client-common]
path = "../desktop-assistant/crates/client-common"

[dependencies.desktop-assistant-api-model]
path = "../desktop-assistant/crates/api-model"

[dev-dependencies]
tempfile = "3.27.0"
